<resources>
    <string name="app_name">Akhirbulanku</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_pinjam">Form Pengajuan Peminjaman</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Akhirbulanku</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescriptionLogo">Logo</string>
    <string name="hint_email_address">Email address</string>
    <string name="hint_password">Password</string>
    <string name="hint_register">Register</string>
    <string name="hint_debitur">Nama Debitur Sesuai KTP</string>
    <string name="hint_ibu">Nama Ibu Kandung</string>
    <string name="hint_ayah">Nama Ayah Kandung</string>
    <string name="hint_nohp">No. HP Debitur</string>
    <string name="hint_line">ID Line Debitur</string>
    <string name="hint_alamat">Alamat Kos/Rumah Debitur</string>
    <string name="hint_kerabat">Nama Kerabat</string>
    <string name="hint_nohp_kerabat">No. HP Kerabat</string>
    <string name="hint_alamat_kerabat">Alamat Kos/Rumah Kerabat</string>
    <string name="hint_universitas">Universitas Brawijaya</string>
    <string name="hint_tujuan1">Konsumsi</string>
    <string name="hint_tujuan2">Usaha</string>
    <string name="hint_paket1">Paket 16 SKS - Rp 150.000</string>
    <string name="hint_paket2">Paket 20 SKS - Rp 300.000</string>
    <string name="hint_paket3">Paket 24 SKS - Rp 500.000</string>
    <string name="hint_pemilik_rekening">Nama Pemilik Rekengin</string>
    <string name="hint_bank">Bank Tujuan</string>
    <string name="hint_rekening">No. Rekening</string>
    <string name="text_login">Already registered ? Login here</string>
    <string name="item_logout">Logout</string>
    <string name="button_login">LOGIN</string>
    <string name="button_pinjam">Ajukan Peminjaman</string>
    <string name="text_register">Doesn\'t have an account ? Register here</string>
    <string name="item_about">About</string>
    <string name="item_misc">Misc</string>
    <string name="item_home">Home</string>
    <string name="item_dashboard">Dashboard</string>

</resources>
